--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,8 @@
 body {
     background-color: var(--tg-theme-bg-color);
     color: var(--tg-theme-text-color);
+    margin: 0;
+    padding: 0;
 }
 
 .App {
