--- a/src/Pages/PostFeedback/PostFeedback.css
+++ b/src/Pages/PostFeedback/PostFeedback.css
@@ -5,7 +5,8 @@
     padding: 1rem;
     background-color: var(--tg-theme-bg-color);
     color: var(--tg-theme-text-color);
-    overflow: hidden;
+    overflow-y: auto;
+    padding-bottom: 60px; 
   }
   
   .loading-container {
@@ -124,6 +125,8 @@
     -webkit-appearance: none;
     -moz-appearance: none;
     appearance: none;
+    flex-grow: 1;
+    min-height: 100px;
   }
   
   .review-textarea.error {
