--- a/src/Pages/Search/Search.css
+++ b/src/Pages/Search/Search.css
@@ -36,13 +36,13 @@
 
 
 .search-page .search__container {
-    width: 90%;
-    max-width: 600px;
+    width: 95%;
+    max-width: 800px;
     margin: 0 auto;
 }
 
 .search-page .header {
     width: 100%;
-    padding: 1rem;
+    padding: 1rem 0.5rem;
     box-sizing: border-box;
 }
