--- a/src/Pages/Profile/Profile.css
+++ b/src/Pages/Profile/Profile.css
@@ -1,7 +1,8 @@
 .avatar {
-    width: 30vw;
+    width: 80px;
+    height: 80px;
     border-radius: 50%;
-    aspect-ratio: 1;
+    object-fit: cover;
 }
 
 .avatar-container {
@@ -16,4 +17,5 @@
     font-size: 14px;
     margin-top: 8px;
     cursor: pointer;
+    display: block;
 }
