--- a/src/Pages/Profile/Profile.css
+++ b/src/Pages/Profile/Profile.css
@@ -1,8 +1,7 @@
 .avatar {
-    width: 80px;
-    height: 80px;
+    width: 30vw;
     border-radius: 50%;
-    object-fit: cover;
+    aspect-ratio: 1;
 }
 
 .avatar-container {
@@ -17,5 +16,4 @@
     font-size: 14px;
     margin-top: 8px;
     cursor: pointer;
-    display: block;
 }
